@@ -41,7 +41,7 @@ my $build = Module::Build->new(
 
 	'recommends'		=> {
 		# Test stuff
-		'Test::More'			=> 0,
+		'Test::More'			=> '0.86',	# require latest for note() support in t/a_is_prereq_outdated.t
 
 		# our POE loops!
 		'POE::Loop::Event'		=> 0,
